<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="edu.csulb.android.taco.MainActivity"
    android:background="@drawable/images">

    <ImageView
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:src="@drawable/taco"
        android:id="@+id/imageView"
        android:adjustViewBounds="true"
        android:cropToPadding="true"
        android:layout_toStartOf="@+id/textView" />

    <TextView
        android:text="@string/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        tools:text="Taco Pronto"
        android:layout_gravity="center"
        android:gravity="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:textColor="@color/text"/>

    <TextView
        android:text="@string/size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView"
        android:layout_marginTop="15dp"
        android:background="@drawable/border"
        android:layout_gravity="center"
        android:gravity="center"
        android:textColor="@color/text"
        android:id="@+id/textView3"
        android:layout_alignEnd="@+id/imageView"
        android:layout_alignStart="@+id/radiogroup1" />

    <TextView
        android:text="@string/tortilla"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView3"
        android:layout_gravity="center"
        android:gravity="center"
        android:background="@drawable/border"
        android:textColor="@color/text"
        android:id="@+id/textView4"
        android:layout_alignParentEnd="true"
        android:layout_alignStart="@+id/radiogroup2" />

    <RadioGroup
        android:id="@+id/radiogroup1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView3"
        android:layout_alignParentStart="true"
        android:textColor="@color/text"
        android:layout_marginStart="19dp">
        <RadioButton
            android:text="@string/size1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:textColor="@color/text"
            android:id="@+id/radio1" />
        <RadioButton
            android:text="@string/size2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/text"
            android:id="@+id/radio2"
            android:checked="false" />
    </RadioGroup>

    <RadioGroup
        android:id="@+id/radiogroup2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView4"
        android:textColor="@color/text"
        android:layout_alignParentEnd="true" >
        <RadioButton
            android:text="@string/tortilla1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="33dp"
            android:textColor="@color/text"
            android:id="@+id/radio3"
            android:checked="false" />
        <RadioButton
            android:text="@string/tortilla2"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:textColor="@color/text"
            android:id="@+id/radio4" />
    </RadioGroup>

    <TextView
        android:text="@string/fill"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/text"
        android:layout_gravity="center"
        android:background="@drawable/border"
        android:gravity="center"
        android:layout_below="@+id/radiogroup1"
        android:id="@+id/textView7" />

    <CheckBox
        android:text="@string/fill1"
        android:layout_width="wrap_content"
        android:textColor="@color/text"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView7"
        android:layout_alignStart="@+id/radiogroup1"
        android:id="@+id/checkBox1"
        android:textAppearance="@style/TextAppearance.AppCompat.Caption" />

    <CheckBox
        android:text="@string/fill2"
        android:layout_width="wrap_content"
        android:textColor="@color/text"
        android:layout_height="wrap_content"
        android:layout_below="@+id/checkBox1"
        android:layout_alignStart="@+id/checkBox1"
        android:id="@+id/checkBox2"
        android:textAppearance="@style/TextAppearance.AppCompat.Caption" />

    <CheckBox
        android:text="@string/fill3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/text"
        android:layout_below="@+id/checkBox2"
        android:layout_alignStart="@+id/checkBox2"
        android:id="@+id/checkBox3" />

    <CheckBox
        android:text="@string/fill4"
        android:layout_width="wrap_content"
        android:textColor="@color/text"
        android:layout_height="wrap_content"
        android:layout_below="@+id/checkBox3"
        android:layout_alignStart="@+id/checkBox3"
        android:id="@+id/checkBox4" />

    <CheckBox
        android:text="@string/fill5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/checkBox5"
        android:textColor="@color/text"
        android:layout_below="@+id/textView7"
        android:layout_centerHorizontal="true" />

    <CheckBox
        android:text="@string/fill6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/text"
        android:layout_below="@+id/checkBox5"
        android:layout_alignStart="@+id/checkBox5"
        android:id="@+id/checkBox6" />

    <CheckBox
        android:text="@string/fill7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/text"
        android:layout_below="@+id/checkBox6"
        android:layout_alignStart="@+id/checkBox6"
        android:id="@+id/checkBox7" />

    <CheckBox
        android:text="@string/fill8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/text"
        android:layout_below="@+id/checkBox7"
        android:layout_alignStart="@+id/checkBox7"
        android:id="@+id/checkBox8" />

    <CheckBox
        android:text="@string/fill10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/checkBox7"
        android:textColor="@color/text"
        android:layout_alignStart="@+id/checkBox9"
        android:id="@+id/checkBox10" />

    <CheckBox
        android:text="@string/fill11"
        android:layout_width="wrap_content"
        android:textColor="@color/text"
        android:layout_height="wrap_content"
        android:layout_below="@+id/checkBox10"
        android:layout_alignStart="@+id/checkBox10"
        android:id="@+id/checkBox11" />

    <CheckBox
        android:text="@string/fill12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/text"
        android:layout_below="@+id/checkBox11"
        android:layout_alignStart="@+id/checkBox11"
        android:id="@+id/checkBox12" />

    <TextView
        android:text="@string/bev"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/text"
        android:layout_gravity="center"
        android:gravity="center"
        android:background="@drawable/border"
        android:layout_below="@+id/checkBox8"
        android:layout_centerHorizontal="true"
        android:id="@+id/textView8" />

    <CheckBox
        android:text="@string/bev1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView8"
        android:textColor="@color/text"
        android:layout_toStartOf="@+id/textView4"
        android:layout_marginEnd="16dp"
        android:id="@+id/bev1" />

    <CheckBox
        android:text="@string/bev2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/bev1"
        android:layout_alignStart="@+id/bev1"
        android:textColor="@color/text"
        android:id="@+id/bev2" />

    <CheckBox
        android:text="@string/bev3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView8"
        android:layout_toEndOf="@+id/checkBox6"
        android:textColor="@color/text"
        android:id="@+id/bev3" />

    <Button
        android:text="@string/order"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:id="@+id/button2"
        android:layout_alignParentStart="true"
        android:onClick="onClick"/>

    <CheckBox
        android:text="@string/bev4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/bev4"
        android:textColor="@color/text"
        android:layout_below="@+id/bev3"
        android:layout_toEndOf="@+id/checkBox8"
        android:layout_alignStart="@+id/bev3" />

    <TextView
        android:text="@string/string1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:id="@+id/textView2"
        android:layout_below="@+id/textView"
        android:layout_toEndOf="@+id/imageView" />

    <CheckBox
        android:text="@string/fill9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/text"
        android:layout_marginStart="10dp"
        android:id="@+id/checkBox9"
        android:layout_below="@+id/textView7"
        android:layout_toEndOf="@+id/checkBox5" />

</RelativeLayout>
